# TaskManagerRust

./: .gitignore  Cargo.toml  README.md
.github/workflows/: rust.yml
src/: args.rs  command.rs  config.rs  main.rs
src/command/: check.rs  create.rs  delete.rs  done.rs  types.rs  update.rs
src/command/types/: label.rs  task.rs
src/config/: check_args.rs  parse_arg.rs
src/setup/: file.rs
src/types/: task.rs
