[package]
name = "TaskManagerRust"
version = "0.1.0"
authors = ["isso0424 <isso04240129@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.11", features = ["serde"] }
log = "0.4.8"
serde_json = "1.0.55"
serde = { version = "1.0.111", features = ["derive"] }
